# source

./: .gitignore  README.md
Calculator/src/: main.rs
Calculator/ui/: app-window.slint
GTFS/: gtfs.py  oebb.py  out.txt  request.py  stations.json  train-inf.json  trips.json
PythonProject/: dockerfile  keba.py
TerminalUtil/: .zsh_history  Cargo.toml  README.md  devcontainer.json  dockerfile
TerminalUtil/src/: main.rs
Test/src/: ConcatTest.java  Main.java  Person.java  Projekt.java  Projektmanagement.java  Test.java  Zeiteintrag.java
Train-Information/: index.html  index.js  package.json
analyze_history/src/: Analyse.java  Command.java  Main.java
axum-alpine-tailwind/: Cargo.toml
axum-alpine-tailwind/src/: main.rs
axum-alpine-tailwind/static/js/: alpine.js
axum-alpine-tailwind/templates/: index.html
my_valence_server/: Cargo.toml
my_valence_server/src/: main.rs
new_out_tracker/: .env  Cargo.toml  diesel.toml
new_out_tracker/src/: main.rs  models.rs  schema.rs
output_tracker/: .env  Cargo.toml  diesel.toml
output_tracker/migrations/2025-01-14-071524_create_users/: down.sql  up.sql
output_tracker/src/: main.rs  models.rs  schema.rs
rustLearn/Learn/: Cargo.toml
rustLearn/enums_patterns/: Cargo.toml
show_csv/: BIG-ASS-CSV.py  Cargo.toml  README.md  kids.csv  kids.csv.bak  test.csv  test2.csv
show_csv/src/: args.rs  csv.rs  main.rs  print.rs  sql.rs
traindata/: Cargo.toml
tst_diesel/: .env  Cargo.toml  diesel.toml
tst_diesel/src/: main.rs  models.rs
untis_api/: Cargo.toml
untis_api/src/: main.rs
untis_util/: Cargo.toml
(+10 files in other folders)
