[package]
name = "axum-alpine-tailwind"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
hyper = { version = "1.6", features = ["http1", "http2", "server"] }
tower = "0.4"
tower-http = { version = "0.5.0", features = ["fs"] }
askama = "0.12"
askama_axum = "0.4"
rustls = "0.22"                                                      # TLS (Optional)
hyper-rustls = { version = "0.24", features = ["http2"] }            # HTTP/2 mit TLS
